@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- The lpstat command now supports a "-W" option so that
+	  you can display completed jobs as well as
+	  not-completed (pending) jobs.
 	- The lp and lpr commands did not return an error when
 	  one or more files in a set of files for printing could
 	  not be printed.
